tests/bad/void-return.c
void increment(int x) { return x; }

int main()
{
    increment();
    return 0;
}
